--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-User_Suite" class="navigator-link">
-              <span class="suite-name border-passed">User_Suite</span>
+              <span class="suite-name border-failed">User_Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-User_Suite" class="navigator-link ">
-                    <span>D:\work\com.demo.ng_crs\testng.xml</span>
+                    <span>D:\MyWorkSpace\ng_crs\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,40 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">6 methods, 1 failed,  2 skipped,  3 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-User_Suite" class="hide-methods failed suite-User_Suite"> (hide)</a> <!-- hide-methods failed suite-User_Suite -->
+                      <a href="#" panel-name="suite-User_Suite" class="show-methods failed suite-User_Suite"> (show)</a> <!-- show-methods failed suite-User_Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-User_Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="agent">agent</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-User_Suite -->
+                  </li>
+                  <li>
+                    <span class="method-list-title skipped">Skipped methods</span>
+                    <span class="show-or-hide-methods skipped">
+                      <a href="#" panel-name="suite-User_Suite" class="hide-methods skipped suite-User_Suite"> (hide)</a> <!-- hide-methods skipped suite-User_Suite -->
+                      <a href="#" panel-name="suite-User_Suite" class="show-methods skipped suite-User_Suite"> (show)</a> <!-- show-methods skipped suite-User_Suite -->
+                    </span>
+                    <div class="method-list-content skipped suite-User_Suite">
+                      <span>
+                        <img src="skipped.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="cruises">cruises</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="skipped.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="newBooking">newBooking</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content skipped suite-User_Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,16 +134,6 @@
                       <a href="#" panel-name="suite-User_Suite" class="show-methods passed suite-User_Suite"> (show)</a> <!-- show-methods passed suite-User_Suite -->
                     </span>
                     <div class="method-list-content passed suite-User_Suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="agent">agent</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="cruises">cruises</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="csu">csu</a> <!-- method navigator-link -->
@@ -126,11 +149,6 @@
                         <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="menu">menu</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="newBooking">newBooking</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                     </div> <!-- method-list-content passed suite-User_Suite -->
                   </li>
                 </ul>
@@ -143,9 +161,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-User_Suite" class="panel User_Suite">
-          <div class="suite-User_Suite-class-passed">
+          <div class="suite-User_Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">tests.BookingTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -154,15 +172,59 @@
                   <a name="agent">
                   </a> <!-- agent -->
                   <span class="method-name">agent</span>
+                  <div class="stack-trace">java.lang.AssertionError: Failed to retrieve agents: Expected condition failed: waiting for visibility of element located by By.xpath: //a[@class=&apos;fs-12 ng-star-inserted&apos;] (tried for 30 second(s) with 500 milliseconds interval)
+Build info: version: &apos;4.25.0&apos;, revision: &apos;8a8aea2337&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;23.0.1&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 130.0.6723.70, chrome: {chromedriverVersion: 130.0.6723.69 (3ec172b971b9..., userDataDir: C:\Users\EFFIAS~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53347}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:53347/devtoo..., se:cdpVersion: 130.0.6723.70, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: cd17455286eabbb62a961a25771565b3
+	at pages.Agency.agent(Agency.java:127)
+	at tests.BookingTest.agent(BookingTest.java:93)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 26 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-User_Suite-class-failed -->
+          <div class="suite-User_Suite-class-skipped">
+            <div class="main-panel-header rounded-window-top">
+              <img src="skipped.png"/>
+              <span class="class-name">tests.BookingTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
                   <a name="cruises">
                   </a> <!-- cruises -->
                   <span class="method-name">cruises</span>
+                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.cruises() on instance tests.BookingTest@2bb7bd00 depends on not successfully finished methods 
+[tests.BookingTest.newBooking() on instance tests.BookingTest@2bb7bd00]
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 18 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="newBooking">
+                  </a> <!-- newBooking -->
+                  <span class="method-name">newBooking</span>
+                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.newBooking() on instance tests.BookingTest@2bb7bd00 depends on not successfully finished methods 
+[tests.BookingTest.agent() on instance tests.BookingTest@2bb7bd00]
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 18 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-User_Suite-class-skipped -->
+          <div class="suite-User_Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">tests.BookingTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
                   <a name="csu">
@@ -184,19 +246,12 @@
                   <span class="method-name">menu</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="newBooking">
-                  </a> <!-- newBooking -->
-                  <span class="method-name">newBooking</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-User_Suite-class-passed -->
         </div> <!-- panel User_Suite -->
         <div panel-name="test-xml-User_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\work\com.demo.ng_crs\testng.xml</span>
+            <span class="header-content">D:\MyWorkSpace\ng_crs\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -254,32 +309,32 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'agent')
 data.setCell(0, 2, 'tests.BookingTest')
-data.setCell(0, 3, 65999);
+data.setCell(0, 3, 132963);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'cruises')
+data.setCell(1, 1, 'csu')
 data.setCell(1, 2, 'tests.BookingTest')
-data.setCell(1, 3, 23171);
+data.setCell(1, 3, 11988);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'csu')
+data.setCell(2, 1, 'login')
 data.setCell(2, 2, 'tests.BookingTest')
-data.setCell(2, 3, 14530);
+data.setCell(2, 3, 9625);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'login')
+data.setCell(3, 1, 'menu')
 data.setCell(3, 2, 'tests.BookingTest')
-data.setCell(3, 3, 10799);
+data.setCell(3, 3, 4122);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'menu')
+data.setCell(4, 1, 'cruises')
 data.setCell(4, 2, 'tests.BookingTest')
-data.setCell(4, 3, 4129);
+data.setCell(4, 3, 1);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'newBooking')
 data.setCell(5, 2, 'tests.BookingTest')
-data.setCell(5, 3, 268);
+data.setCell(5, 3, 0);
 window.suiteTableData['User_Suite']= { tableData: data, tableDiv: 'times-div-User_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-User_Suite">
               </div> <!-- times-div-User_Suite -->
             </div> <!-- times-div -->
@@ -312,27 +367,21 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">login</span>
-                <span class="method-start">1428 ms</span>
+                <span class="method-start">2374 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">menu</span>
-                <span class="method-start">12262 ms</span>
+                <span class="method-start">12000 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">csu</span>
-                <span class="method-start">16398 ms</span>
+                <span class="method-start">16131 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">agent</span>
-                <span class="method-start">30936 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">newBooking</span>
-                <span class="method-start">96935 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">cruises</span>
-                <span class="method-start">97219 ms</span>
+                <span class="method-start">28119 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
